Also build the docs in the travis build (#143)
* Also build the docs in the travis build
* Removed kafka mentions (copy-pasta) and use ref for internal links

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,8 @@ jobs:
     - env:
         - PRE_CMD="docker-compose -f docker/couchbase-1-node/docker-compose.yml up -d couchbase"
         - CMD=lagom-persistence-couchbase-scaladsl/multi-jvm:test
+    - env:
+        - CMD=docs/paradox
 
     - stage: publish
       script: sbt +publish
