--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,8 @@ jobs:
         - CMD=lagom-persistence-couchbase-scaladsl/multi-jvm:test
     - env:
         - CMD=docs/paradox
+    - env:
+        - CMD=root/doc
 
     - stage: publish
       script: sbt +publish
