--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,16 @@ sudo: required
 services:
   - docker
 
-jdk:
-  - oraclejdk8
+before_install:
+  # using jabba for custom jdk management
+  - curl -sL https://raw.githubusercontent.com/shyiko/jabba/0.11.2/install.sh | bash && . ~/.jabba/jabba.sh
+  - jabba install adopt@~1.8.202-08
+  - jabba install adopt@~1.11.0-2  
 
 # default script for jobs, that do not have any specified
 script:
+  - jabba use ${JDK:=adopt@~1.8.202-08}  
+  - java -version
   - ${PRE_CMD:=return 0} # do nothing if not set
   - sbt -jvm-opts .jvmopts-travis "$CMD"
 
@@ -28,6 +33,7 @@ jobs:
     - env: CMD="+Test/compile"
 
     - stage: test
+      name: "Run tests (AdoptOpenJDK 8)"
     - env:
         - PRE_CMD="docker-compose -f docker/couchbase-1-node/docker-compose.yml up -d couchbase"
         - CMD=core/test
@@ -49,6 +55,11 @@ jobs:
         - CMD=docs/paradox
     - env:
         - CMD=root/doc
+    - env:
+        - JDK="adopt@~1.11.0-2"
+        - CMD="+test"
+        - PRE_CMD="docker-compose -f docker/couchbase-1-node/docker-compose.yml up -d couchbase"
+        name: "Run tests (AdoptOpenJDK 11)"
 
     - stage: publish
       script: sbt +publish
@@ -78,6 +89,7 @@ cache:
   directories:
     - $HOME/.ivy2/cache
     - $HOME/.sbt/boot
+    - $HOME/.jabba/jdk
 
 env:
   global:
