Update project support info for docs (#213)

--- a/project/project-info.conf
+++ b/project/project-info.conf
@@ -1,7 +1,7 @@
 project-info {
   version: "current"
   shared-info {
-    jdk-versions: ["OpenJDK 8"]
+    jdk-versions: ["OpenJDK 8", "OpenJDK 11"]
 //    snapshots: {
 //      url: "other-docs/snapshots.html"
 //      text: "Snapshots are available"
@@ -37,7 +37,12 @@ project-info {
     jpms-name: "akka.persistence.couchbase"
     levels: [
       {
-        readiness: Incubating
+        readiness: "Supported"
+        since: "2019-04-25"
+        since-version: "1.0"
+      },
+      {
+        readiness: "Incubating"
         since: "2018-11-16"
         since-version: "0.1"
       }
